// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewTimelineDetailsP2 Given the component mounts When the API returns successful data Then it renders heading, summaries and snapshot 1`] = `
<div>
  <div
    data-testid="shutter-wrapper"
  >
    <div
      data-testid="loading-wrapper"
    >
      <button
        data-testid="back-btn"
      >
        Back
      </button>
      <div
        data-testid="main-wrapper"
      >
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-two-thirds"
          >
            <h1
              class="govuk-heading-l govuk-!-margin-bottom-2"
            >
              WE_ARE_CHANGING_YOUR_TAX_CODE_FOR
               
              Tesco
            </h1>
            <p
              class="govuk-hint"
            >
              formatted-2025-10-01
            </p>
            <dl
              class="govuk-summary-list"
              title="CHANGE_OF_TAX_CODE"
            >
              <div
                class="govuk-summary-list__row"
              >
                <dt
                  class="govuk-summary-list__key"
                >
                  WHY_IT_CHANGED
                </dt>
                <dd
                  class="govuk-summary-list__value"
                >
                  <div
                    data-testid="why-explainer"
                  >
                    [{"a":1}]
                  </div>
                </dd>
              </div>
              <div
                class="govuk-summary-list__row"
              >
                <dt
                  class="govuk-summary-list__key"
                >
                  WHAT_THIS_MEANS_FOR_YOU
                </dt>
                <dd
                  class="govuk-summary-list__value"
                >
                  <div
                    data-testid="what-explainer"
                  >
                    500
                  </div>
                </dd>
              </div>
              <div
                class="govuk-summary-list__row"
              >
                <dt
                  class="govuk-summary-list__key"
                >
                  HOW_WE_WILL_COLLECT_IT
                </dt>
                <dd
                  class="govuk-summary-list__value"
                >
                  <div
                    data-testid="how-explainer"
                  >
                    Tesco
                  </div>
                </dd>
              </div>
            </dl>
            <h2
              class="govuk-heading-m"
            >
              WHAT_HAPPENS_NEXT
            </h2>
            <p
              class="govuk-body"
            >
              THIS_IS_FOR_INFO_ONLY_NOT_DO_ANYTHING_UNLESS_CHANGED
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewTimelineDetailsP2 Given the component mounts When the API throws an error Then it renders page without How/Why/What and matches snapshot 1`] = `
<div>
  <div
    data-testid="shutter-wrapper"
  >
    <div
      data-testid="loading-wrapper"
    >
      <button
        data-testid="back-btn"
      >
        Back
      </button>
      <div
        data-testid="main-wrapper"
      >
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-two-thirds"
          >
            <h1
              class="govuk-heading-l govuk-!-margin-bottom-2"
            >
              WE_ARE_CHANGING_YOUR_TAX_CODE_FOR
               
              Tesco
            </h1>
            <p
              class="govuk-hint"
            >
              formatted-2025-10-01
            </p>
            <dl
              class="govuk-summary-list"
              title="CHANGE_OF_TAX_CODE"
            >
              <div
                class="govuk-summary-list__row"
              >
                <dt
                  class="govuk-summary-list__key"
                >
                  WHY_IT_CHANGED
                </dt>
                <dd
                  class="govuk-summary-list__value"
                >
                  <div
                    data-testid="why-explainer"
                  />
                </dd>
              </div>
              <div
                class="govuk-summary-list__row"
              >
                <dt
                  class="govuk-summary-list__key"
                >
                  WHAT_THIS_MEANS_FOR_YOU
                </dt>
                <dd
                  class="govuk-summary-list__value"
                >
                  <div
                    data-testid="what-explainer"
                  />
                </dd>
              </div>
            </dl>
            <h2
              class="govuk-heading-m"
            >
              WHAT_HAPPENS_NEXT
            </h2>
            <p
              class="govuk-body"
            >
              THIS_IS_FOR_INFO_ONLY_NOT_DO_ANYTHING_UNLESS_CHANGED
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
